Avoid horizontal scrollbar

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -347,6 +347,15 @@
     .btn-group {
       margin-top: -2px;
     }
+    .gn-sort-by {
+      .pull-right {
+        margin-top: 0;
+        height: 2.8em;
+        .btn {
+          height: 2.8em;
+        }
+      }
+    }
   }
 
 }
